# Latency-Tester

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: build_target_windows.yml  gitlab_to_github.yml  windows_release.yml
src/: config.rs  main.rs  screenshot.rs  spectrust.rs
src/network/: messages.rs  networkmanager.rs
