[package]
name = "latency_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
opt-level = 3       # optimize for speed
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
gtk4 = "0.8.0"
message-io = "0.18"
serde = { version = "1.0.196", features = ["derive"] }
bincode="1.3.3"
glib = "0.19.2"
async-channel = "2.2.0"
xcap = "0.0.4"
image = "0.24.9"
spectrust = "0.2.0"
leptess ="0.14.0"
regex = "1.10.3"
chrono = "0.4.34"