[package]
name = "latency_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
opt-level = 3       # optimize for speed
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*


[dependencies]
gtk = "0.18.1"
message-io = "0.18.1"
serde = { version = "1.0.197", features = ["derive"] }
bincode="1.3.3"
glib = "0.19.5"
async-channel = "2.2.0"
xcap = "0.0.9"
image = "0.25.1"
leptess ="0.14.0"
regex = "1.10.3"
chrono = "0.4.34"
preferences ="1.1.0"
toml = "0.8.10"
